# sparta-mapper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
eval/: eval_set.json  run_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
src/sparta_mapper/: __init__.py  cli.py  nvd.py
src/sparta_mapper/api/: main.py
src/sparta_mapper/classify/: classifier.py
src/sparta_mapper/ingest/: stix_loader.py
src/sparta_mapper/retrieval/: embed.py
src/sparta_mapper/store/: db.py
tests/: test_stix_loader.py
